tests/functional/lang/eval-fail/fromTOML-valueWithNullByte.err.exp
error:
       … while calling the 'fromTOML' builtin
         at /pwd/lang/eval-fail/fromTOML-valueWithNullByte.nix:1:1:
            1| builtins.fromTOML ''k = "a\u0000b"''
             | ^
            2|

       error: while parsing TOML: error: input string 'a␀b' cannot be represented as Nix string because it contains null bytes
